resolved the 2 scrollbar error

--- a/AppleVisionPro-Clone/style.css
+++ b/AppleVisionPro-Clone/style.css
@@ -18,6 +18,7 @@ main{
     position: relative;
     width: 100%;
     min-height: 100vh;
+    overflow: hidden;
 }
 .page{
     display: flex;
@@ -560,15 +561,49 @@ canvas{
 .page19{
     position: relative;
     width: 100%;
-    min-height: 100vh;
+    height: 200vh;
     background-color: white;
+   
 }
 .page19in{
     position: absolute;
     width: 100%;
-    min-height: 100vh;
-    background-color: white;
+    height: 200vh;
+    background-color:white;
     z-index: 15;
+    overflow: hidden;
+}
+.pg19inp1{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.pg19inp1a{
+    width: 45%;
+    height: 90%;
+    background-image: url(https://www.apple.com/v/apple-vision-pro/a/images/overview/design/glass_top__k3b8lzqd1l2m_large.jpg);
+    background-color: red;
+}
+.pg19inp1b{
+    width: 45%;
+    height: 90%;
+    background-image: url(https://www.apple.com/v/apple-vision-pro/a/images/overview/design/glass_side__gm4agomrwl2e_large.jpg);
+    background-color: blue;
+}
+.pg19inp2{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+}
+.pg19inp2 .videoContainer{
+    width: 93%;
+    height: 93%;
 }
 
 
